# gtec-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: read_eeg.rs  scan.rs  stream.rs
sdk/: checksums.sha256  download.sh
src/: ble.rs  device.rs  error.rs  ffi.rs  ffi_ble.rs  lib.rs  main.rs  protocol.rs  sandbox.rs  types.rs  verify.rs
tests/: types_tests.rs
