[package]
name = "gtec"
version = "0.0.1"
edition = "2021"
description = "Rust library and TUI for g.tec Unicorn Hybrid Black 8-channel EEG headset via the Unicorn C API (runtime-loaded)"
keywords = ["eeg", "gtec", "unicorn", "bci", "bluetooth"]
authors = ["Eugene Hauptmann"]
license-file = "LICENSE"
homepage = "https://github.com/eugenehp/gtec-rs"
repository = "https://github.com/eugenehp/gtec-rs"
documentation = "https://docs.rs/gtec"
readme = "README.md"

[features]
default = ["tui"]
tui = [
    "dep:ratatui",
    "dep:crossterm",
]

[lib]
name = "gtec"
path = "src/lib.rs"

[[bin]]
name = "gtec"
path = "src/main.rs"

[[bin]]
name = "gtec-tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[dependencies]
# Dynamic loading of the Unicorn shared library at runtime
libloading = "0.8"

# Error handling
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# OS-level sandboxing
libc = "0.2"

# TUI (optional)
ratatui = { version = "0.30", features = ["crossterm"], optional = true }
crossterm = { version = "0.29", optional = true }
